--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required( VERSION 3.1.0 FATAL_ERROR )
 
-project( "integration test suite" )
+project( "integration test suite" LANGUAGES CXX )
 
 #
 # Configuration
