--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,18 +3,17 @@ image: Visual Studio 2017
 configuration: Release
 platform: x64
 clone_folder: C:\projects\runloop
-clone_script:
-- cmd: git clone --recursive http://github.com/corvusoft/runloop.git
-before_build:
+install:
+- cmd: git submodule update --init --recursive
+build_script:
 - cmd: >-
     mkdir c:\projects\runloop\build
 
     cd c:\projects\runloop\build
 
     cmake -G "Visual Studio 15 2017" ..
-build:
-  project: c:\projects\runloop\build\runloop.sln
-  verbosity: detailed
+
+    cmake --build . --target ALL_BUILD --config Release
 test_script:
 - cmd: >-
     cd c:\projects\runloop\build
