--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,30 @@ find_package( catch REQUIRED )
 #
 # Configuration
 #
-include( "${PROJECT_SOURCE_DIR}/cmake/configuration.cmake" )
-
+set( CMAKE_CXX_STANDARD 14 )
+set( CMAKE_INSTALL_LIBDIR library )
 set( INCLUDE_DIR "${PROJECT_SOURCE_DIR}/source" )
+
+if ( CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT )
+    set( CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/distribution" CACHE PATH "Install path prefix" FORCE )
+endif ( )
+
+if( ${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC )
+    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_WIN32_WINNT=0x0601 /W4 /wd4068 /wd4702" )
+endif ( )
+
+if( NOT WIN32 )
+    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Weffc++ -pedantic -Wno-unknown-pragmas" )
+endif ( )
+
+if ( UNIX AND NOT APPLE )
+    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread" )
+endif ( )
+
+if ( APPLE )
+    set( CMAKE_MACOSX_RPATH ON )
+endif ( )
+
 include_directories( ${INCLUDE_DIR} SYSTEM )
 
 #
@@ -47,10 +68,6 @@ add_subdirectory( "${PROJECT_SOURCE_DIR}/test/integration" )
 # Install
 #
 file( GLOB ARTIFACTS "source/corvusoft/core/*.hpp" )
-
-if ( NOT DEFINED CMAKE_INSTALL_LIBDIR )
-    set( CMAKE_INSTALL_LIBDIR library )
-endif ( )
 
 install( FILES ${ARTIFACTS} DESTINATION "${CMAKE_INSTALL_PREFIX}/include/corvusoft/core" )
 install( TARGETS ${STATIC_LIBRARY_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT library )
