Refactored test suites.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ target_link_libraries( ${SHARED_LIBRARY_NAME} )
 
 enable_testing( )
 add_subdirectory( "${PROJECT_SOURCE_DIR}/test/unit" )
-add_subdirectory( "${PROJECT_SOURCE_DIR}/test/acceptance" )
+add_subdirectory( "${PROJECT_SOURCE_DIR}/test/feature" )
 add_subdirectory( "${PROJECT_SOURCE_DIR}/test/integration" )
 
 #
