--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dependency/catch"]
-	path = dependency/catch
-	url = https://github.com/corvusoft/catch-dependency
+[submodule "dependency/core"]
+	path = dependency/core
+	url = https://github.com/Corvusoft/core.git
