--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required( VERSION 3.1.0 FATAL_ERROR )
 
 project( "runloop" VERSION 1.0.0 LANGUAGES CXX )
-message( "Copyright 2013-2017, Corvusoft Ltd, All Rights Reserved." )
+message( "Copyright 2016-2018, Corvusoft Ltd, All Rights Reserved." )
 
 #
 # Dependencies
@@ -60,9 +60,9 @@ set_target_properties( ${SHARED_LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VER
 target_link_libraries( ${SHARED_LIBRARY_NAME} )
 
 enable_testing( )
-add_subdirectory( "${PROJECT_SOURCE_DIR}/test/unit" )
+#add_subdirectory( "${PROJECT_SOURCE_DIR}/test/unit" )
 add_subdirectory( "${PROJECT_SOURCE_DIR}/test/feature" )
-add_subdirectory( "${PROJECT_SOURCE_DIR}/test/integration" )
+#add_subdirectory( "${PROJECT_SOURCE_DIR}/test/integration" )
 
 #
 # Install
